--- a/resume.html
+++ b/resume.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gaurav Jolly - Software Development Engineer in Test</title>
+    <title>Ashutosh Singh - Lead Consltant</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -70,8 +70,8 @@
 
 <body>
     <header>
-        <h1>Hi, I'm Gaurav Jolly</h1>
-        <p>Software Development Engineer in Test</p>
+        <h1>Hi, I'm Ashutosh Singh</h1>
+        <p>Lead Consultant</p>
         <p>Always Learning | Technology Enthusiast</p>
     </header>
 
@@ -80,10 +80,34 @@
             <h2>Work Experience</h2>
             <ul>
                 <li>
-                    <strong>LOCONAV, Gurugram​</strong> - SDET (Sept. 2019 - PRESENT)
+                    <strong>Genpact, Gurugram​</strong> - Lead consultant (Sept. 2024 - PRESENT)
                     <ul>
                         <li>End to End sprint QA ownership of Mobile application (Android + iOS).</li>
-                        <li>API Automation using Postman and Newman CLI for telematics and fastag operations.</li>
+                        <li>API testing using Postman</li>
+                        <li>Integrated API automation suite of 100+ APIs over Jenkins.</li>
+                        <li>Designed Automation Framework for Android mobile app automation.</li>
+                        <li>Written reliable Automated Test Suites using Appium.</li>
+                        <li>Automated Sanity Suite for Android app.</li>
+                        <li>Gained knowledge of Analytics Services like Google Analytics/Mixpanel.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Loconav, Gurugram​</strong> - Senior SDET (May 2022 - Aug. 2024)
+                    <ul>
+                        <li>End to End sprint QA ownership of Mobile application (Android + iOS).</li>
+                        <li>API testing using Postman</li>
+                        <li>Integrated API automation suite of 100+ APIs over Jenkins.</li>
+                        <li>Designed Automation Framework for Android mobile app automation.</li>
+                        <li>Written reliable Automated Test Suites using Appium.</li>
+                        <li>Automated Sanity Suite for Android app.</li>
+                        <li>Gained knowledge of Analytics Services like Google Analytics/Mixpanel.</li>
+                    </ul>
+                </li>
+                <li>
+                    <strong>Qualitest, Noida​</strong> -Software Test Engineer II (Feb 2018 - April 2022)
+                    <ul>
+                        <li>End to End sprint QA ownership of Mobile application (Android + iOS).</li>
+                        <li>API testing using Postman</li>
                         <li>Integrated API automation suite of 100+ APIs over Jenkins.</li>
                         <li>Designed Automation Framework for Android mobile app automation.</li>
                         <li>Written reliable Automated Test Suites using Appium.</li>
@@ -113,28 +137,21 @@
             <h2>Technical Knowledge</h2>
             <ul class="skills">
                 <li>Selenium</li>
-                <li>Mocha</li>
                 <li>WebDriver IO</li>
                 <li>TestNG</li>
-                <li>Appium</li>
-                <li>Xcode</li>
-                <li>JUnit</li>
-                <li>Cucumber</li>
+                <li> Playwright</li>
                 <li>Maven</li>
                 <li>Postman</li>
-                <li>Newman</li>
                 <li>Git</li>
                 <li>Jenkins</li>
                 <li>Jira</li>
-                <li>Salesforce</li>
                 <li>Java</li>
                 <li>JavaScript</li>
                 <li>MySQL</li>
                 <li>Node.js</li>
                 <li>HTML</li>
                 <li>CSS</li>
-                <li>C Language</li>
-                <li>C++ Language</li>
+                
             </ul>
         </section>
 
@@ -145,7 +162,7 @@
     </div>
 
     <footer>
-        <p>&copy; 2024 Gaurav Jolly</p>
+        <p>&copy; 2025 Ashutosh Singh</p>
     </footer>
 </body>
 
