--- a/resume.html
+++ b/resume.html
@@ -1,169 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashutosh Singh - Lead Consltant</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f9;
-            margin: 0;
-            padding: 0;
-            color: #333;
-        }
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ashutosh Singh - Lead Consultant</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      background-color: #f4f4f9;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
 
-        header {
-            background-color: #2d3a46;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
+    header {
+      background-color: #2d3a46;
+      color: white;
+      padding: 20px;
+      text-align: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
 
-        header h1 {
-            margin: 0;
-        }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
 
-        .content {
-            padding: 20px;
-        }
+    .content {
+      padding: 20px;
+      max-width: 960px;
+      margin: auto;
+    }
 
-        .content h2 {
-            color: #2d3a46;
-            font-size: 24px;
-        }
+    h2 {
+      color: #2d3a46;
+      font-size: 22px;
+      border-bottom: 2px solid #ccc;
+      padding-bottom: 5px;
+    }
 
-        .section {
-            margin-bottom: 30px;
-        }
+    details {
+      margin-bottom: 20px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      transition: all 0.3s ease;
+    }
 
-        .skills ul, .education ul, .work-experience ul {
-            list-style-type: none;
-            padding-left: 0;
-        }
-
-        .skills li, .education li, .work-experience li {
-            background-color: #ffffff;
-            margin: 5px 0;
-            padding: 10px;
-            border-radius: 5px;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-        }
-
-        footer {
-            background-color: #2d3a46;
-            color: white;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-
-        .contact {
-            text-align: center;
-            margin-top: 40px;
-        }
-    </style>
-</head>
-
-<body>
-    <header>
-        <h1>Hi, I'm Ashutosh Singh</h1>
-        <p>Lead Consultant</p>
-        <p>Always Learning | Technology Enthusiast</p>
-    </header>
-
-    <div class="content">
-        <section class="section work-experience">
-            <h2>Work Experience</h2>
-            <ul>
-                <li>
-                    <strong>Genpact, Gurugram​</strong> - Lead consultant (Sept. 2024 - PRESENT)
-                    <ul>
-                        <li>End to End sprint QA ownership of Mobile application (Android + iOS).</li>
-                        <li>API testing using Postman</li>
-                        <li>Integrated API automation suite of 100+ APIs over Jenkins.</li>
-                        <li>Designed Automation Framework for Android mobile app automation.</li>
-                        <li>Written reliable Automated Test Suites using Appium.</li>
-                        <li>Automated Sanity Suite for Android app.</li>
-                        <li>Gained knowledge of Analytics Services like Google Analytics/Mixpanel.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Loconav, Gurugram​</strong> - Senior SDET (May 2022 - Aug. 2024)
-                    <ul>
-                        <li>End to End sprint QA ownership of Mobile application (Android + iOS).</li>
-                        <li>API testing using Postman</li>
-                        <li>Integrated API automation suite of 100+ APIs over Jenkins.</li>
-                        <li>Designed Automation Framework for Android mobile app automation.</li>
-                        <li>Written reliable Automated Test Suites using Appium.</li>
-                        <li>Automated Sanity Suite for Android app.</li>
-                        <li>Gained knowledge of Analytics Services like Google Analytics/Mixpanel.</li>
-                    </ul>
-                </li>
-                <li>
-                    <strong>Qualitest, Noida​</strong> -Software Test Engineer II (Feb 2018 - April 2022)
-                    <ul>
-                        <li>End to End sprint QA ownership of Mobile application (Android + iOS).</li>
-                        <li>API testing using Postman</li>
-                        <li>Integrated API automation suite of 100+ APIs over Jenkins.</li>
-                        <li>Designed Automation Framework for Android mobile app automation.</li>
-                        <li>Written reliable Automated Test Suites using Appium.</li>
-                        <li>Automated Sanity Suite for Android app.</li>
-                        <li>Gained knowledge of Analytics Services like Google Analytics/Mixpanel.</li>
-                    </ul>
-                </li>
-            </ul>
-        </section>
-
-        <section class="section education">
-            <h2>Education</h2>
-            <ul>
-                <li>
-                    <strong>2012</strong> - Senior School (9.8 CGPA) <br> Kamal Public Sr. Sec. School, Delhi - CBSE Board
-                </li>
-                <li>
-                    <strong>2014</strong> - Higher Secondary (86%) <br> Kamal Public Sr. Sec. School, Delhi - CBSE Board
-                </li>
-                <li>
-                    <strong>2018</strong> - B.TECH - Computer Science Engineering (77%) <br> HMR Institute of Technology and Management, Delhi, Guru Gobind Singh Indraprastha University
-                </li>
-            </ul>
-        </section>
-
-        <section class="section technical-knowledge">
-            <h2>Technical Knowledge</h2>
-            <ul class="skills">
-                <li>Selenium</li>
-                <li>WebDriver IO</li>
-                <li>TestNG</li>
-                <li> Playwright</li>
-                <li>Maven</li>
-                <li>Postman</li>
-                <li>Git</li>
-                <li>Jenkins</li>
-                <li>Jira</li>
-                <li>Java</li>
-                <li>JavaScript</li>
-                <li>MySQL</li>
-                <li>Node.js</li>
-                <li>HTML</li>
-                <li>CSS</li>
-                
-            </ul>
-        </section>
-
-        <section class="contact">
-            <h2>Let's Get in Touch</h2>
-            <p>Feel free to reach out to me through my contact information.</p>
-        </section>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Ashutosh Singh</p>
-    </footer>
-</body>
-
-</html>
+    summary {
+      padding: 12px 16px;
+      font-weight: bold;
+      cursor: poi
