--- a/resume.html
+++ b/resume.html
@@ -52,4 +52,142 @@
     summary {
       padding: 12px 16px;
       font-weight: bold;
-      cursor: poi
+      cursor: pointer;
+      background-color: #e9eff3;
+      border-radius: 8px;
+    }
+
+    summary:hover {
+      background-color: #d3dde5;
+    }
+
+    ul {
+      list-style: none;
+      padding-left: 20px;
+    }
+
+    li {
+      background-color: #fff;
+      margin: 5px 0;
+      padding: 10px;
+      border-radius: 6px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease;
+    }
+
+    li:hover {
+      transform: scale(1.02);
+    }
+
+    .skills li {
+      display: inline-block;
+      margin: 6px;
+      padding: 8px 12px;
+      background: #f0f7ff;
+      color: #2d3a46;
+      border: 1px solid #cce0f5;
+    }
+
+    .contact {
+      text-align: center;
+      margin-top: 40px;
+      padding: 20px;
+      background-color: #e9eff3;
+      border-radius: 10px;
+    }
+
+    footer {
+      background-color: #2d3a46;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      position: relative;
+      bottom: 0;
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Hi, I'm Ashutosh Singh</h1>
+  <p>Lead Consultant | Automation Enthusiast</p>
+</header>
+
+<div class="content">
+
+  <details open>
+    <summary>Work Experience</summary>
+    <ul>
+      <li>
+        <strong>Genpact, Gurugram​</strong> - Lead Consultant (Sept 2024 - Present)
+        <ul>
+          <li>End to End sprint QA ownership of Mobile application (Android + iOS).</li>
+          <li>API testing using Postman</li>
+          <li>Integrated API automation suite of 100+ APIs over Jenkins.</li>
+          <li>Designed Automation Framework for Android mobile app automation.</li>
+          <li>Written reliable Automated Test Suites using Appium.</li>
+          <li>Automated Sanity Suite for Android app.</li>
+          <li>Gained knowledge of Analytics Services like Google Analytics/Mixpanel.</li>
+        </ul>
+      </li>
+      <li>
+        <strong>Loconav, Gurugram​</strong> - Senior SDET (May 2022 - Aug 2024)
+        <ul>
+          <li>Same responsibilities as Genpact, handled fast-paced startup-level QA with ownership.</li>
+        </ul>
+      </li>
+      <li>
+        <strong>Qualitest, Noida​</strong> - Software Test Engineer II (Feb 2018 - April 2022)
+        <ul>
+          <li>Led multiple sprint QA deliveries across client projects in e-learning and healthcare domains.</li>
+        </ul>
+      </li>
+    </ul>
+  </details>
+
+  <details>
+    <summary>Education</summary>
+    <ul>
+      <li><strong>2018</strong> - B.Tech in Computer Science (77%)<br>HMR Institute of Technology and Management, GGSIPU</li>
+      <li><strong>2014</strong> - Higher Secondary (86%)<br>Kamal Public Sr. Sec. School, Delhi</li>
+      <li><strong>2012</strong> - Senior School (9.8 CGPA)<br>Kamal Public Sr. Sec. School, Delhi</li>
+    </ul>
+  </details>
+
+  <details>
+    <summary>Technical Skills</summary>
+    <ul class="skills">
+      <li>Selenium</li>
+      <li>WebDriver IO</li>
+      <li>TestNG</li>
+      <li>Playwright</li>
+      <li>Maven</li>
+      <li>Postman</li>
+      <li>Git</li>
+      <li>Jenkins</li>
+      <li>Jira</li>
+      <li>Java</li>
+      <li>JavaScript</li>
+      <li>MySQL</li>
+      <li>Node.js</li>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
+  </details>
+
+  <section class="contact">
+    <h2>Let’s Get in Touch</h2>
+    <p>Email: ashutosh.singh@example.com</p>
+    <p>LinkedIn: linkedin.com/in/ashutosh-singh</p>
+    <p>GitHub: github.com/ashutosh-testing</p>
+  </section>
+
+</div>
+
+<footer>
+  &copy; 2025 Ashutosh Singh
+</footer>
+
+</body>
+</html>
