--- a/resume.html
+++ b/resume.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Ashutosh Singh - Lead Consultant</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-ZZZ..." crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -21,11 +22,6 @@
       position: sticky;
       top: 0;
       z-index: 1000;
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 28px;
     }
 
     .content {
@@ -86,6 +82,12 @@
       background: #f0f7ff;
       color: #2d3a46;
       border: 1px solid #cce0f5;
+      font-size: 14px;
+      border-radius: 20px;
+    }
+
+    .skills i {
+      margin-right: 6px;
     }
 
     .contact {
@@ -96,13 +98,29 @@
       border-radius: 10px;
     }
 
+    .contact a {
+      display: inline-block;
+      margin: 10px;
+      color: #2d3a46;
+      text-decoration: none;
+      font-size: 18px;
+      transition: transform 0.3s ease;
+    }
+
+    .contact a:hover {
+      transform: scale(1.2);
+      color: #0077b5;
+    }
+
+    .contact i {
+      margin-right: 8px;
+    }
+
     footer {
       background-color: #2d3a46;
       color: white;
       text-align: center;
       padding: 10px;
-      position: relative;
-      bottom: 0;
       margin-top: 40px;
     }
   </style>
@@ -111,7 +129,7 @@
 
 <header>
   <h1>Hi, I'm Ashutosh Singh</h1>
-  <p>Lead Consultant | Automation Enthusiast</p>
+  <p>Lead Consultant | SDET</p>
 </header>
 
 <div class="content">
@@ -119,68 +137,48 @@
   <details open>
     <summary>Work Experience</summary>
     <ul>
-      <li>
-        <strong>Genpact, Gurugram​</strong> - Lead Consultant (Sept 2024 - Present)
+      <li><strong>Genpact, Gurugram</strong> – Lead Consultant (Sept 2024 – Present)
         <ul>
-          <li>End to End sprint QA ownership of Mobile application (Android + iOS).</li>
-          <li>API testing using Postman</li>
-          <li>Integrated API automation suite of 100+ APIs over Jenkins.</li>
-          <li>Designed Automation Framework for Android mobile app automation.</li>
-          <li>Written reliable Automated Test Suites using Appium.</li>
-          <li>Automated Sanity Suite for Android app.</li>
-          <li>Gained knowledge of Analytics Services like Google Analytics/Mixpanel.</li>
+          <li>End-to-end sprint QA ownership for Android & iOS apps.</li>
+          <li>API testing via Postman and automation via Jenkins.</li>
         </ul>
       </li>
-      <li>
-        <strong>Loconav, Gurugram​</strong> - Senior SDET (May 2022 - Aug 2024)
-        <ul>
-          <li>Same responsibilities as Genpact, handled fast-paced startup-level QA with ownership.</li>
-        </ul>
-      </li>
-      <li>
-        <strong>Qualitest, Noida​</strong> - Software Test Engineer II (Feb 2018 - April 2022)
-        <ul>
-          <li>Led multiple sprint QA deliveries across client projects in e-learning and healthcare domains.</li>
-        </ul>
-      </li>
+      <li><strong>Loconav, Gurugram</strong> – Senior SDET (May 2022 – Aug 2024)</li>
+      <li><strong>Qualitest, Noida</strong> – Software Test Engineer II (Feb 2018 – Apr 2022)</li>
     </ul>
   </details>
 
   <details>
     <summary>Education</summary>
     <ul>
-      <li><strong>2018</strong> - B.Tech in Computer Science (77%)<br>HMR Institute of Technology and Management, GGSIPU</li>
-      <li><strong>2014</strong> - Higher Secondary (86%)<br>Kamal Public Sr. Sec. School, Delhi</li>
-      <li><strong>2012</strong> - Senior School (9.8 CGPA)<br>Kamal Public Sr. Sec. School, Delhi</li>
+      <li><strong>2015-2017</strong> – MCA (Master of Computer Application), Ajay kumar Garg Enginerring College, UPTU </li>
+      <li><strong>2012-1015</strong> – BCA (Bachelor of Computer Application), Lucknow University </li>
+      <li><strong>2012</strong> – Higher Secondary – UP Board</li>
+      <li><strong>2010</strong> – Senior School – UP Board</li>
     </ul>
   </details>
 
   <details>
     <summary>Technical Skills</summary>
     <ul class="skills">
-      <li>Selenium</li>
-      <li>WebDriver IO</li>
-      <li>TestNG</li>
-      <li>Playwright</li>
-      <li>Maven</li>
-      <li>Postman</li>
-      <li>Git</li>
-      <li>Jenkins</li>
-      <li>Jira</li>
-      <li>Java</li>
-      <li>JavaScript</li>
-      <li>MySQL</li>
-      <li>Node.js</li>
-      <li>HTML</li>
-      <li>CSS</li>
+      <li><i class="fab fa-java"></i>Java</li>
+      <li><i class="fab fa-js-square"></i>JavaScript</li>
+      <li><i class="fab fa-node"></i>Node.js</li>
+      <li><i class="fab fa-github"></i>GitHub</li>
+      <li><i class="fas fa-code"></i>Selenium</li>
+      <li><i class="fas fa-vial"></i>Postman</li>
+      <li><i class="fas fa-toolbox"></i>Jenkins</li>
+      <li><i class="fas fa-database"></i>MySQL</li>
+      <li><i class="fas fa-bug"></i>Playwright</li>
+      <li><i class="fas fa-project-diagram"></i>Jira</li>
     </ul>
   </details>
 
   <section class="contact">
-    <h2>Let’s Get in Touch</h2>
-    <p>Email: ashutosh.singh@example.com</p>
-    <p>LinkedIn: linkedin.com/in/ashutosh-singh</p>
-    <p>GitHub: github.com/ashutosh-testing</p>
+    <h2>Let’s Connect</h2>
+    <a href="mailto:01ashu31@gmail.com"><i class="fas fa-envelope"></i>Email</a>
+    <a href="https://github.com/01ashu31" target="_blank"><i class="fab fa-github"></i>GitHub</a>
+    <a href="https://www.linkedin.com/in/ashutosh-singh-172a3774/" target="_blank"><i class="fab fa-linkedin"></i>LinkedIn</a>
   </section>
 
 </div>
